--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: finosage-backend
     runtime: python
-    buildCommand: pip install -r backend/requirements.txt
-    startCommand: cd backend && uvicorn main:app --host 0.0.0.0 --port $PORT
+    buildCommand: pip install -r requirements.txt
+    startCommand: bash start.sh
     envVars:
       - key: PYTHONPATH
         value: .
@@ -12,3 +12,4 @@ services:
     cors:
       allowedOrigins:
         - https://finosage-frontend.vercel.app
+        - https://finosage-backend.onrender.com
