--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,5 @@ typing-extensions==4.8.0
 scikit-learn==1.3.2
 requests==2.31.0
 python-multipart==0.0.6
-numpy==1.26.2 
+numpy==1.26.2
+gunicorn==21.2.0
